# ber-estimator

./: .gitignore  PlotBER.ipynb  README.md  notebook.ipynb  samples.csv
project/: CMakeLists.txt  Makefile  config.ini
project/archive/: CMakeLists.txt
project/archive/ber/: conv_k7_r12_ask4_natural_awgn.csv
project/archive/include/: channel.hpp  coder.hpp  utils.hpp
project/archive/src/: main.cpp
project/ber/: conv_k7_r12_ask2_awgn.csv  conv_k7_r12_ask4_gray_awgn.csv  uncoded_ask2_awgn.csv  uncoded_ask4_gray_awgn.csv  uncoded_ask4_natural_awgn.csv
project/include/: config.hpp  modem.hpp  simulation.hpp
project/src/: channel.cpp  coder.cpp  config.cpp  main.cpp  simulation.cpp  utils.cpp
src/: main.cpp  test
